[gd_scene load_steps=15 format=3 uid="uid://dqu4ut7vf7sqy"]

[ext_resource type="Texture2D" uid="uid://by4ddgtlw5a23" path="res://sprites/SpaceShips/spaceship_red.png" id="1"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_rds1p"]
[ext_resource type="AudioStream" uid="uid://cmk5ciy3qtobn" path="res://sounds/fx/shots/EnergyGun_Shoot1B.wav" id="3"]
[ext_resource type="AudioStream" uid="uid://d2ai71le6flht" path="res://sounds/fx/shots/EnergyGun_Shoot1D.wav" id="4"]
[ext_resource type="AudioStream" uid="uid://cf6yku4exyu2h" path="res://sounds/fx/shots/EnergyGun_Shoot2D.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://bhve26lanbwpm" path="res://sounds/fx/shots/EnergyGun_Shoot2C.wav" id="6"]
[ext_resource type="AudioStream" uid="uid://dutx6dc7bxcrw" path="res://sounds/fx/shots/EnergyGun_Shoot1A.wav" id="7"]
[ext_resource type="AudioStream" uid="uid://b4rpiv2lsl658" path="res://sounds/fx/shots/EnergyGun_Shoot2B.wav" id="8"]
[ext_resource type="AudioStream" uid="uid://dpcuwxl6qfxng" path="res://sounds/fx/shots/EnergyGun_Shoot1C.wav" id="9"]
[ext_resource type="AudioStream" uid="uid://bsqc3ux5bso7f" path="res://sounds/fx/shots/EnergyGun_Shoot2A.wav" id="10"]
[ext_resource type="AudioStream" uid="uid://dutpygokgyrbn" path="res://sounds/fx/hits/explosion_04.wav" id="11"]
[ext_resource type="Animation" path="res://animations/player_ship_hit.tres" id="12"]
[ext_resource type="AudioStream" uid="uid://bwq8p12y4lobx" path="res://sounds/fx/hits/explosion_25.wav" id="13"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a4tcx"]
_data = {
"player_ship_hit": ExtResource("12")
}

[node name="Node2D" type="Node2D"]
scale = Vector2(0.8, 0.8)
script = ExtResource("1_rds1p")
shot_sounds = Array[AudioStream]([ExtResource("7"), ExtResource("3"), ExtResource("9"), ExtResource("4"), ExtResource("10"), ExtResource("8"), ExtResource("6"), ExtResource("5")])
hit_sound = ExtResource("11")
die_sound = ExtResource("13")

[node name="CharacterBody2D" type="CharacterBody2D" parent="." groups=["player"]]

[node name="ProjectileSpawnPos" type="Marker2D" parent="CharacterBody2D"]
position = Vector2(0, -37)

[node name="ProjectileAudioPlayer" type="AudioStreamPlayer2D" parent="CharacterBody2D/ProjectileSpawnPos"]
position = Vector2(0, 37)
volume_db = -9.0

[node name="SpaceshipRed" type="Sprite2D" parent="CharacterBody2D"]
texture_filter = 1
position = Vector2(0, 1)
texture = ExtResource("1")

[node name="ShipAudioPlayer" type="AudioStreamPlayer2D" parent="CharacterBody2D"]
stream = ExtResource("11")
volume_db = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterBody2D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_a4tcx")
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CharacterBody2D"]
build_mode = 1
polygon = PackedVector2Array(-40, 40, -48, 40, -48, 8, -16, -8, -16, -40, 16, -40, 16, -8, 48, 8, 48, 40)

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
